[package]
name = "ltengine"
version = "0.1.1"
edition = "2024"

[dependencies]
actix-web = "4"
clap = { version = "4.6.1", features = ["derive"] }
once_cell = "1.21.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
actix-web-static-files = "4.1"
static-files = "0.2.5"
hf-hub = { version = "0.3.2" }
anyhow = "1.0.102"
thiserror = { workspace = true }
parking_lot = "0.12.5"
llama-cpp-2 = { version = "0.1.150" }
encoding_rs = "0.8.35"
actix-multipart = "0.7.2"
whatlang = "0.16.4"

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]

[build-dependencies]
static-files = "0.2.5"
